@@ -10,6 +10,8 @@ git-annex (8.20210331) UNRELEASED; urgency=medium
   * fsck: When downloading content from a remote, if the content is able
     to be verified during the transfer, skip checksumming it a second time.
   * directory: When cp supports reflinks, use it.
+  * init: Fix a crash when the repo's was cloned from a repo that had an
+    adjusted branch checked out, and the origin remote is not named "origin".    
 
  -- Joey Hess <id@joeyh.name>  Thu, 01 Apr 2021 12:17:26 -0400
 
